Fix spacing around card components on dashboard

--- a/client/app/styles/style.css
+++ b/client/app/styles/style.css
@@ -80,5 +80,9 @@ footer {
   margin-top: 60px;
 }
 
+.card-spacing {
+  padding-bottom: 50px;
+}
+
 
 
